# vidya

./: .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  vidya.cfg.sample
scripts/: auto-build-brython  auto-test  run-checker  run-web  vidya-uwsgi.ini  vidya-uwsgi.sh
vidya/: default_settings.py
vidya/cmd/: checker.py  web.py
vidya/models/: __init__.py  activities.py  assignments.py  attendances.py  classes.py  users.py
vidya/web/: __init__.py  acl.py  oauth2.py
vidya/web/forms/: __init__.py  accounts.py  activities.py  assignments.py  attendances.py  attendees.py  classes.py  courses.py  fields.py
vidya/web/static/: package-lock.json  package.json
vidya/web/templates/accounts/: login.html
vidya/web/templates/activities/: index.html  practice.html  register.html  register_fail.html  register_success.html
vidya/web/templates/attendances/: checkin.html  checkin_fail.html  checkin_success.html  practice.html_back
vidya/web/templates/base/: banner.html  toolbar-dashboard.html
vidya/web/templates/dashboard/: index-admin.html  index.html
vidya/web/views/: __init__.py  accounts.py  activities.py  assignments.py  attendances.py  challenges.py  classes.py  courses.py  dashboard.py  scoreboards.py  solutions.py
vidya/web/views/admin/: __init__.py
vidya/web/views/administration/: __init__.py  activities.py  assignments.py  attendances.py  attendees.py  challenges.py  classes.py  courses.py  profiles.py  solutions.py  users.py
vidya/web/views/teaching_assistants/: __init__.py  classes.py  (+1 more)
(+22 files in other folders)
